--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,5 +30,5 @@ edition = "2021"
 again = "0.1"
 bollard = "0.16"
 futures = "0.3"
-tokio = { version = "1", features = ["macros", "time"] }
+tokio = { version = "1", features = ["macros", "time", "rt-multi-thread"] }
 speculoos = "0.11.0"
